
Improved efficiency of rmtxop in cases where matrix multiplication is
faster evaluated right-to-left, as when the final component is a
column vector.  Also added ability to apply trailing unary operators
(-t, and -s or -c) to resulting matrix.

Added new depth, normal, and ID file types to radcompare.

Added BigEndian= header line for automatic byte-swapping in rmtxop
and radcompare.  Doesn't work quite as automatically as it should
for pvalue -r, currently.

Added new "turbo" palette to falsecolor (thanks to Taoning).

Nathaniel Jones created the "dcglare" program for annual glare
simulations when the sun and sky are visible through the window.
Tutorial is posted at
"https://github.com/nljones/Accelerad/wiki/The-Imageless-Method-for-Spatial-and-Annual-Glare-Analysis".

Added support for loading RGBE images into matrices in dctimestep.

Added -y option to gensky and gendaylit to support more accurate Michalsky
solar position calculation.

Changed rsplit so specifying a space as the separator parses words
between whitespace.

Added ability of vwrays, pinterp, and pmblur2 to read encoded depth files.

Added -o RxCxR1xC1 facility to perform blocking in rcollate.

Made it so number of segments in genworm, genrev, and gensurf can be
given as expressions of previously defined variables, etc.

Added -D and -n option to gendaymtx to output sun description and skip
matrix output on request.

Updated eplus_uvf to work with IDF version 9.x, checking version number.

Fix to glarendx issues with dgi calculation.

Made it so rmtxop and dctimestep undo any exposure applied to Radiance
pictures they may load.

Added objutil utility to manipulate Wavefront .OBJ files.

Fixed a crash related to rtrace -om or -oM with mesh instances containing
materials.

Improved rtrace flushing function to handle any value for -x without
deadlock on controlling process.

Eliminated unnecessary start-up procedures for rtrace when only ray-casting
is needed (i.e., no tracing or value output).